--- a/start/index.html
+++ b/start/index.html
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/default.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/qna.css">
+    <link rel="stylesheet" href="./css/animation.css">
     
 </head>
 <body>
@@ -24,14 +26,15 @@
                 나만의 MBTI 사이트입니다!<br>
                 아래 시작하기 버튼으로 시작해주세요!
             </p>
-            <button type="button" class="btn btn-outline-danger mt-2">시작하기</button>
+            <button type="button" class="btn btn-outline-danger mt-2" onclick="js:begin()">시작하기</button>
         </section>
         <section id="qna">
-
+            <p>test!</p>
         </section>
         <section id="result">
 
         </section>
+        <script src="./js/start.js" charset="UTF-8"></script>
     </div>
 </body>
 </html>
