--- a/start/index.html
+++ b/start/index.html
@@ -29,11 +29,17 @@
             <button type="button" class="btn btn-outline-danger mt-2" onclick="js:begin()">시작하기</button>
         </section>
         <section id="qna">
-            <p>test!</p>
+            <div class="qBox">
+
+            </div>
+            <div class="answerBox">
+
+            </div>
         </section>
         <section id="result">
 
         </section>
+        <script src="./js/data.js" charset="UTF-8"></script>
         <script src="./js/start.js" charset="UTF-8"></script>
     </div>
 </body>
